# d7engine

./: Cargo.toml  README.md
assets/font/default/: default_font.aseprite
src/: api.rs  camera.rs  color.rs  core.rs  lib.rs  prelude.rs  program.rs  project.rs  shader.rs  shapes.rs  texture.rs  transform.rs
src/core/: camera.rs  chunk.rs  color.rs  component.rs  default.rs  event.rs  file.rs  font.rs  instanced_component.rs  label.rs  math.rs  mouse.rs  performance.rs  project.rs  rect.rs  resource.rs  seed.rs  shader.rs  text.rs  texture.rs  transform.rs  triangle.rs  window.rs
src/core/chunk/: layer.rs  map.rs
src/core/file/: installation.rs
src/core/math/: collision.rs  interpolation.rs  linear.rs  model_view_projection.rs  mvp.rs  pathfinding.rs  transform.rs
src/core/resource/: csv.rs  font.rs  image.rs  tilemap.rs
src/core/shader/: data.rs  instanced.rs  object.rs  program.rs  shader.rs
src/core/shader/object/: circle.rs  rect.rs  text.rs  texture.rs
src/program/: rect.rs  text.rs  texture.rs
src/shader/: rect.frag  rect.vert  text.frag  text.vert  texture.frag  texture.vert
src/shaders/: font.frag  font.vert  rect.vert  texture.frag  texture.vert
src/shapes/: rect.rs  triangle.rs
