# reference tutorial
# http://nercury.github.io/rust/opengl/tutorial/2018/02/11/opengl-in-rust-from-scratch-04-triangle.html

[package]
name = "d7engine"
version = "0.2.0"
authors = ["Markus Dick"]
edition = "2018"

[dependencies]
gl = "0.14.0"
nalgebra-glm = "0.16.0"
image = "0.23.14"
directories = "4.0.1"
sha2 = "0.10.1"
rusttype = "0.9.2"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["bundled", "static-link"]