# reference tutorial
# http://nercury.github.io/rust/opengl/tutorial/2018/02/11/opengl-in-rust-from-scratch-04-triangle.html

[package]
name = "d7engine"
version = "1.1.2"
authors = ["Markus Dick"]
edition = "2018"
description = "A game engine in rust with SDL2 and opengl."
license = "MIT"
documentation = "https://docs.rs/d7engine"
repository = "https://github.com/debugseven/d7engine"

[dependencies]
gl = "0.14.0"
nalgebra-glm = "0.18.0"
image = "0.24.5"
directories = "4.0.1"
sha2 = "0.10.6"
rusttype = "0.9.3"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["bundled", "static-link"]